// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Pipeline Studio should render default pipeline studio 1`] = `
<div>
   
  <div
    class="container container"
  >
    <div
      class="leftBar"
    >
      <div>
        <span
          class="bp3-icon StyledProps---main--1Wws logoImage"
        >
          <svg
            height="29"
            viewBox="0 0 25 25"
            width="29"
          >
            <path
              d="M22.974 8.186L16.708 1.88a7.023 7.023 0 00-2.59-1.572C11.98-.409 9.858.154 8.135 1.88L1.868 8.186a7.081 7.081 0 00-1.562 2.606c-.713 2.153-.153 4.289 1.562 6.023l6.266 6.306a7.113 7.113 0 002.589 1.58 5.663 5.663 0 001.808.308c1.503 0 2.946-.64 4.177-1.88l6.266-6.305a7.08 7.08 0 001.562-2.606c.713-2.162.153-4.298-1.562-6.032zm-10.07-4.477c.706.213 1.232.7 1.274.735l1.851 1.862-3.608 3.631-3.608-3.63 1.859-1.872c.5-.496 1.197-1.034 2.233-.726zm-9.219 8.305c.212-.71.696-1.24.73-1.282l1.85-1.863 3.609 3.632-3.608 3.63-1.86-1.87c-.492-.504-1.027-1.214-.721-2.247zm8.252 9.279c-.705-.214-1.231-.701-1.273-.735l-1.851-1.863 3.608-3.631 3.608 3.631-1.86 1.871c-.5.496-1.205 1.034-2.232.726zm9.22-8.305c-.212.709-.696 1.239-.73 1.281l-1.851 1.863-3.608-3.631 3.608-3.632 1.86 1.872c.492.504 1.027 1.204.72 2.247z"
              fill="#4facdf"
            />
          </svg>
        </span>
        <p
          class="StyledProps---font--2ipy StyledProps---main--1Wws title"
        >
          Pipeline Studio
        </p>
      </div>
      <div>
        <div
          class="closeBtn"
          title="Dashboard"
        >
          <span
            class="bp3-icon bp3-icon-cross StyledProps---main--1Wws logoImage StyledProps---margin-xsmall--VgmY StyledProps---padding-xsmall---5eB"
            icon="cross"
          >
            <svg
              data-icon="cross"
              height="21"
              viewBox="0 0 20 20"
              width="21"
            >
              <desc>
                cross
              </desc>
              <path
                d="M11.41 10l4.29-4.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L10 8.59l-4.29-4.3a1.003 1.003 0 00-1.42 1.42L8.59 10 4.3 14.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4.29-4.3 4.29 4.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L11.41 10z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
    <div
      class="bp3-popover-dismiss content"
    >
      <div
        class="topBar"
      >
        <div>
          <a
            class="topButtons"
            href="/account/null/ci/pipeline-studio/orgs/testOrg/projects/test/pipelines/-1/ui/"
          >
            VISUAL
          </a>
          <a
            class="topButtons"
            href="/account/null/ci/pipeline-studio/orgs/testOrg/projects/test/pipelines/-1/yaml/"
          >
            YAML
          </a>
        </div>
        <div>
          <span
            class="Tag---main--1vng"
          >
            <span
              class="bp3-tag bp3-intent-primary bp3-minimal tagRender"
            >
              <span
                class="bp3-text-overflow-ellipsis bp3-fill"
              >
                unsaved changes
              </span>
            </span>
          </span>
        </div>
        <div>
          <button
            class="bp3-button bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws savePublishBtn StyledProps---intent-primary--2Xgi"
            type="button"
          >
            <span
              class="bp3-icon bp3-icon-arrow-up StyledProps---main--1Wws StyledProps---padding-right-xsmall--3D04"
              icon="arrow-up"
            >
              <svg
                data-icon="arrow-up"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  arrow-up
                </desc>
                <path
                  d="M13.7 6.3l-5-5C8.5 1.1 8.3 1 8 1s-.5.1-.7.3l-5 5c-.2.2-.3.4-.3.7 0 .6.5 1 1 1 .3 0 .5-.1.7-.3L7 4.4V14c0 .6.4 1 1 1s1-.4 1-1V4.4l3.3 3.3c.2.2.4.3.7.3.6 0 1-.4 1-1 0-.3-.1-.5-.3-.7z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span
              class="bp3-button-text"
            >
              Save and Publish
            </span>
          </button>
        </div>
      </div>
      <div
        class="secondaryBar"
      >
        <span
          class="bp3-icon StyledProps---main--1Wws"
          style="padding-left: 20px;"
        >
          <svg
            height="38"
            viewBox="0 0 38 16"
            width="38"
          >
            <path
              d="M23.71.966a1 1 0 01.068.067L26.475 4H30V3a1 1 0 011-1h6a1 1 0 011 1v3a1 1 0 01-1 1h-6a1 1 0 01-1-1V5h-3.31l-2.912 3.203a1 1 0 01-1.48 0L19.384 5H18v1a1 1 0 01-1 1h-6a1 1 0 01-1-1V5H8v1a1 1 0 01-1 1H1a1 1 0 01-1-1V3a1 1 0 011-1h6a1 1 0 011 1v1h2V3a1 1 0 011-1h6a1 1 0 011 1v1h1.599l2.699-2.967A1 1 0 0123.71.966zm.04 1.31a1 1 0 00-1.414 0l-1.768 1.767a1 1 0 000 1.414l1.768 1.768a1 1 0 001.414 0l1.768-1.768a1 1 0 000-1.414zM6 3H2a1 1 0 00-1 1v1a1 1 0 001 1h4a1 1 0 001-1V4a1 1 0 00-1-1zm10 0h-4a1 1 0 00-1 1v1a1 1 0 001 1h4a1 1 0 001-1V4a1 1 0 00-1-1zm20 0h-4a1 1 0 00-1 1v1a1 1 0 001 1h4a1 1 0 001-1V4a1 1 0 00-1-1zm-19 8a1 1 0 011 1v3a1 1 0 01-1 1h-6a1 1 0 01-1-1v-3a1 1 0 011-1h6zm-1 1h-4a1 1 0 00-1 1v1a1 1 0 001 1h4a1 1 0 001-1v-1a1 1 0 00-1-1z"
              fill="#25A6F7"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <div>
          <p
            class="StyledProps---font--2ipy StyledProps---main--1Wws pipelineName"
          >
            
          </p>
          <button
            class="bp3-button bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 Button---iconOnly--_pvt StyledProps---main--1Wws"
            type="button"
          >
            <span
              class="bp3-icon StyledProps---main--1Wws"
            >
              <svg
                height="12"
                viewBox="0 0 12 12"
                width="12"
              >
                <g
                  fill="none"
                  fill-rule="evenodd"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                >
                  <path
                    d="M8.66 1.823h0L2.244 8.239v1.75h1.75l6.416-6.416a1.75 1.75 0 00-1.75-1.75z"
                    stroke="#555770"
                  />
                  <path
                    d="M6.583 5.146l2.063-2.063"
                    opacity="0.3"
                    stroke="#606170"
                  />
                </g>
              </svg>
            </span>
          </button>
        </div>
        <div
          class="btnGroup"
        >
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <button
                class="bp3-button bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws"
                tabindex="0"
                type="button"
              >
                <span
                  class="bp3-icon StyledProps---main--1Wws StyledProps---padding-right-xsmall--3D04 StyledProps---color--8PuS"
                >
                  <svg
                    height="16"
                    viewBox="0 0 14 16"
                    width="16"
                  >
                    <path
                      d="M12.378 6.154L3.226.329A2.034 2.034 0 001.084.282 2.171 2.171 0 000 2.189v11.597C0 15 .947 15.993 2.112 16h.009c.364 0 .743-.118 1.097-.341a.636.636 0 00.201-.858.593.593 0 00-.83-.207.907.907 0 01-.471.158c-.44-.002-.91-.391-.91-.966V2.19c0-.344.174-.65.465-.818a.872.872 0 01.919.02l9.152 5.825a.926.926 0 01.432.8c0 .334-.16.625-.436.8L5.123 13a.636.636 0 00-.2.857.593.593 0 00.83.207L12.37 9.88a2.186 2.186 0 001.014-1.861 2.186 2.186 0 00-1.006-1.865z"
                      fill="#22272D"
                    />
                  </svg>
                </span>
                <span
                  class="bp3-button-text"
                >
                  Triggers
                </span>
              </button>
            </span>
          </span>
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <button
                class="bp3-button bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws"
                tabindex="0"
                type="button"
              >
                <span
                  class="bp3-icon StyledProps---main--1Wws StyledProps---padding-right-xsmall--3D04 StyledProps---color--8PuS"
                >
                  <svg
                    height="16"
                    viewBox="0 0 14 16"
                    width="16"
                  >
                    <path
                      d="M1.614 12.444v-.94l1.786-1.9-.007-.008a4.93 4.93 0 01-.665-2.485c0-2.618 1.995-4.741 4.455-4.741s4.456 2.123 4.456 4.74c0 .913-.245 1.764-.665 2.486l-.008.008 1.787 1.9v.94H1.613zm5.57 2.37c-.616 0-1.115-.53-1.115-1.185h2.228c0 .655-.499 1.185-1.114 1.185zm6.52-3.975l-1.377-1.463a6.2 6.2 0 00.425-2.265c0-3.068-2.202-5.598-5.012-5.896V0H6.626v1.215c-2.81.298-5.012 2.828-5.012 5.896 0 .802.152 1.567.425 2.265L.663 10.839a.613.613 0 00-.163.42v2.37h4.455c0 1.308 1 2.37 2.228 2.37s2.228-1.062 2.228-2.37h4.455v-2.37a.613.613 0 00-.163-.42z"
                      fill="#22272D"
                    />
                  </svg>
                </span>
                <span
                  class="bp3-button-text"
                >
                  Notifications
                </span>
              </button>
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="rightBar"
    >
      <div />
      <button
        class="iconButton"
      >
        <span
          class="bp3-icon StyledProps---main--1Wws"
          title="Template Library"
        >
          <svg
            height="16"
            viewBox="0 0 12 13"
            width="16"
          >
            <defs>
              <path
                d="M1.8 13c.2 0 .4-.3.4-.6V.6C2.2.3 2 0 1.8 0H.4C.2 0 0 .3 0 .6v11.7c0 .4.2.7.4.7h1.4zm8.8 0l.9-.3c.3-.1.5-.4.4-.8L8.9.6C8.8.3 8.5.1 8.1.2l-.9.3c-.4 0-.5.4-.5.7l3.1 11.3c.1.4.5.6.8.5zm-5 0c.2 0 .4-.3.4-.7V.6c0-.3-.2-.6-.4-.6H4.2c-.2 0-.4.3-.4.6v11.7c0 .4.2.7.4.7h1.4z"
                id="template-library_svg__a"
              />
            </defs>
            <clippath
              id="template-library_svg__b"
            >
              <use
                overflow="visible"
                xlink:href="#template-library_svg__a"
              />
            </clippath>
            <path
              clip-path="url(#template-library_svg__b)"
              d="M-5-5h22v23H-5z"
              fill="#25a6f7"
            />
          </svg>
        </span>
      </button>
      <button
        class="iconButton"
      >
        <span
          class="bp3-icon StyledProps---main--1Wws"
          title="Input Variables"
        >
          <svg
            height="16"
            viewBox="0 0 15.4 12.2"
            width="16"
          >
            <defs>
              <path
                d="M12.5 6.1l-.2-.4c-.1-.3-.2-.4-.2-.5l-.2-.5c-.2-.4-.3-.6-.5-.6s-.4.2-.6.7c-.1 0-.2-.1-.2-.2 0-.2.1-.4.4-.7.2-.3.5-.4.6-.4.4 0 .8.5 1.2 1.6l.2.3.1-.2c.7-1.1 1.3-1.7 1.8-1.7.1 0 .3 0 .4.1l-.6.6h-.2c-.4 0-.8.4-1.3 1.3l-.1.2.1.3c.4 1.2.8 1.8 1.1 1.8.3 0 .5-.2.6-.6.1.1.1.1.1.2 0 .2-.1.4-.4.6-.3.2-.5.4-.7.4-.4 0-.8-.5-1.2-1.6l-.1-.4-.1.3c-.7 1.2-1.3 1.8-2 1.8-.2 0-.4-.1-.6-.2l.6-.6c.1.1.2.2.4.2.4 0 .8-.4 1.3-1.1l.3-.4v-.3zm-6.1-.5L2.6.9h3.8s1.3-.1 1.8.6.6 1.8.6 1.8h.5L9.1 0H0v.5l4.7 5.7L0 11.7v.5h9.3l.6-3.6-.5-.1s-.2.8-.8 1.5c-.6.7-3.1.6-3.1.6H2.1l4.3-5z"
                id="pipeline-variables_svg__a"
              />
            </defs>
            <clippath
              id="pipeline-variables_svg__b"
            >
              <use
                overflow="visible"
                xlink:href="#pipeline-variables_svg__a"
              />
            </clippath>
            <path
              clip-path="url(#pipeline-variables_svg__b)"
              d="M-5-5h25.4v22.2H-5z"
              fill="#9d7cff"
            />
          </svg>
        </span>
      </button>
      <button
        class="iconButton"
      >
        <span
          class="bp3-icon StyledProps---main--1Wws"
          title="Run Pipeline"
        >
          <svg
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <defs>
              <path
                d="M7.2 10.6V5.4L10.6 8l-3.4 2.6zm4.4-3.3L7.4 4.1c-.3-.2-.6-.2-.9-.1-.3.2-.5.5-.5.8v6.4c0 .3.2.6.5.8.3.1.6.1.9-.1l4.2-3.2c.2-.2.3-.4.3-.7s-.1-.5-.3-.7zm1.1 5.4c-2.2 2.2-5.7 2.6-8.4.8s-3.6-5.1-2.4-8c1.2-2.9 4.3-4.6 7.4-4 3.1.6 5.3 3.3 5.3 6.5.1 1.8-.6 3.4-1.9 4.7zm2.7-7.8C13.8 1.1 9.6-.9 5.7.4 1.7 1.6-.7 5.6.2 9.6s4.5 6.8 8.6 6.4c4.1-.4 7.2-3.8 7.2-8 0-1.1-.2-2.1-.6-3.1z"
                id="run-pipeline_svg__a"
              />
            </defs>
            <clippath
              id="run-pipeline_svg__b"
            >
              <use
                overflow="visible"
                xlink:href="#run-pipeline_svg__a"
              />
            </clippath>
            <path
              clip-path="url(#run-pipeline_svg__b)"
              d="M-5-5h26v26H-5z"
              fill="#54b610"
            />
          </svg>
        </span>
      </button>
      <div />
    </div>
  </div>
   
</div>
`;

exports[`Test Pipeline Studio should render edit pipeline studio 1`] = `
<div>
   
  <div
    class="container container"
  >
    <div
      class="leftBar"
    >
      <div>
        <span
          class="bp3-icon StyledProps---main--1Wws logoImage"
        >
          <svg
            height="29"
            viewBox="0 0 25 25"
            width="29"
          >
            <path
              d="M22.974 8.186L16.708 1.88a7.023 7.023 0 00-2.59-1.572C11.98-.409 9.858.154 8.135 1.88L1.868 8.186a7.081 7.081 0 00-1.562 2.606c-.713 2.153-.153 4.289 1.562 6.023l6.266 6.306a7.113 7.113 0 002.589 1.58 5.663 5.663 0 001.808.308c1.503 0 2.946-.64 4.177-1.88l6.266-6.305a7.08 7.08 0 001.562-2.606c.713-2.162.153-4.298-1.562-6.032zm-10.07-4.477c.706.213 1.232.7 1.274.735l1.851 1.862-3.608 3.631-3.608-3.63 1.859-1.872c.5-.496 1.197-1.034 2.233-.726zm-9.219 8.305c.212-.71.696-1.24.73-1.282l1.85-1.863 3.609 3.632-3.608 3.63-1.86-1.87c-.492-.504-1.027-1.214-.721-2.247zm8.252 9.279c-.705-.214-1.231-.701-1.273-.735l-1.851-1.863 3.608-3.631 3.608 3.631-1.86 1.871c-.5.496-1.205 1.034-2.232.726zm9.22-8.305c-.212.709-.696 1.239-.73 1.281l-1.851 1.863-3.608-3.631 3.608-3.632 1.86 1.872c.492.504 1.027 1.204.72 2.247z"
              fill="#4facdf"
            />
          </svg>
        </span>
        <p
          class="StyledProps---font--2ipy StyledProps---main--1Wws title"
        >
          Pipeline Studio
        </p>
      </div>
      <div>
        <div
          class="closeBtn"
          title="Dashboard"
        >
          <span
            class="bp3-icon bp3-icon-cross StyledProps---main--1Wws logoImage StyledProps---margin-xsmall--VgmY StyledProps---padding-xsmall---5eB"
            icon="cross"
          >
            <svg
              data-icon="cross"
              height="21"
              viewBox="0 0 20 20"
              width="21"
            >
              <desc>
                cross
              </desc>
              <path
                d="M11.41 10l4.29-4.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L10 8.59l-4.29-4.3a1.003 1.003 0 00-1.42 1.42L8.59 10 4.3 14.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4.29-4.3 4.29 4.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L11.41 10z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
    <div
      class="bp3-popover-dismiss content"
    >
      <div
        class="topBar"
      >
        <div>
          <a
            class="topButtons"
            href="/account/null/ci/pipeline-studio/orgs/testOrg/projects/test/pipelines/editPipeline/ui/"
          >
            VISUAL
          </a>
          <a
            class="topButtons"
            href="/account/null/ci/pipeline-studio/orgs/testOrg/projects/test/pipelines/editPipeline/yaml/"
          >
            YAML
          </a>
        </div>
        <div />
        <div>
          <button
            class="bp3-button bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws savePublishBtn StyledProps---intent-primary--2Xgi"
            type="button"
          >
            <span
              class="bp3-icon bp3-icon-arrow-up StyledProps---main--1Wws StyledProps---padding-right-xsmall--3D04"
              icon="arrow-up"
            >
              <svg
                data-icon="arrow-up"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  arrow-up
                </desc>
                <path
                  d="M13.7 6.3l-5-5C8.5 1.1 8.3 1 8 1s-.5.1-.7.3l-5 5c-.2.2-.3.4-.3.7 0 .6.5 1 1 1 .3 0 .5-.1.7-.3L7 4.4V14c0 .6.4 1 1 1s1-.4 1-1V4.4l3.3 3.3c.2.2.4.3.7.3.6 0 1-.4 1-1 0-.3-.1-.5-.3-.7z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span
              class="bp3-button-text"
            >
              Save and Publish
            </span>
          </button>
        </div>
      </div>
      <div
        class="secondaryBar"
      >
        <span
          class="bp3-icon StyledProps---main--1Wws"
          style="padding-left: 20px;"
        >
          <svg
            height="38"
            viewBox="0 0 38 16"
            width="38"
          >
            <path
              d="M23.71.966a1 1 0 01.068.067L26.475 4H30V3a1 1 0 011-1h6a1 1 0 011 1v3a1 1 0 01-1 1h-6a1 1 0 01-1-1V5h-3.31l-2.912 3.203a1 1 0 01-1.48 0L19.384 5H18v1a1 1 0 01-1 1h-6a1 1 0 01-1-1V5H8v1a1 1 0 01-1 1H1a1 1 0 01-1-1V3a1 1 0 011-1h6a1 1 0 011 1v1h2V3a1 1 0 011-1h6a1 1 0 011 1v1h1.599l2.699-2.967A1 1 0 0123.71.966zm.04 1.31a1 1 0 00-1.414 0l-1.768 1.767a1 1 0 000 1.414l1.768 1.768a1 1 0 001.414 0l1.768-1.768a1 1 0 000-1.414zM6 3H2a1 1 0 00-1 1v1a1 1 0 001 1h4a1 1 0 001-1V4a1 1 0 00-1-1zm10 0h-4a1 1 0 00-1 1v1a1 1 0 001 1h4a1 1 0 001-1V4a1 1 0 00-1-1zm20 0h-4a1 1 0 00-1 1v1a1 1 0 001 1h4a1 1 0 001-1V4a1 1 0 00-1-1zm-19 8a1 1 0 011 1v3a1 1 0 01-1 1h-6a1 1 0 01-1-1v-3a1 1 0 011-1h6zm-1 1h-4a1 1 0 00-1 1v1a1 1 0 001 1h4a1 1 0 001-1v-1a1 1 0 00-1-1z"
              fill="#25A6F7"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <div>
          <p
            class="StyledProps---font--2ipy StyledProps---main--1Wws pipelineName"
          >
            test-p1
          </p>
          <button
            class="bp3-button bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 Button---iconOnly--_pvt StyledProps---main--1Wws"
            type="button"
          >
            <span
              class="bp3-icon StyledProps---main--1Wws"
            >
              <svg
                height="12"
                viewBox="0 0 12 12"
                width="12"
              >
                <g
                  fill="none"
                  fill-rule="evenodd"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                >
                  <path
                    d="M8.66 1.823h0L2.244 8.239v1.75h1.75l6.416-6.416a1.75 1.75 0 00-1.75-1.75z"
                    stroke="#555770"
                  />
                  <path
                    d="M6.583 5.146l2.063-2.063"
                    opacity="0.3"
                    stroke="#606170"
                  />
                </g>
              </svg>
            </span>
          </button>
        </div>
        <div
          class="btnGroup"
        >
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <button
                class="bp3-button bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws"
                tabindex="0"
                type="button"
              >
                <span
                  class="bp3-icon StyledProps---main--1Wws StyledProps---padding-right-xsmall--3D04 StyledProps---color--8PuS"
                >
                  <svg
                    height="16"
                    viewBox="0 0 14 16"
                    width="16"
                  >
                    <path
                      d="M12.378 6.154L3.226.329A2.034 2.034 0 001.084.282 2.171 2.171 0 000 2.189v11.597C0 15 .947 15.993 2.112 16h.009c.364 0 .743-.118 1.097-.341a.636.636 0 00.201-.858.593.593 0 00-.83-.207.907.907 0 01-.471.158c-.44-.002-.91-.391-.91-.966V2.19c0-.344.174-.65.465-.818a.872.872 0 01.919.02l9.152 5.825a.926.926 0 01.432.8c0 .334-.16.625-.436.8L5.123 13a.636.636 0 00-.2.857.593.593 0 00.83.207L12.37 9.88a2.186 2.186 0 001.014-1.861 2.186 2.186 0 00-1.006-1.865z"
                      fill="#22272D"
                    />
                  </svg>
                </span>
                <span
                  class="bp3-button-text"
                >
                  Triggers
                </span>
              </button>
            </span>
          </span>
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <button
                class="bp3-button bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws"
                tabindex="0"
                type="button"
              >
                <span
                  class="bp3-icon StyledProps---main--1Wws StyledProps---padding-right-xsmall--3D04 StyledProps---color--8PuS"
                >
                  <svg
                    height="16"
                    viewBox="0 0 14 16"
                    width="16"
                  >
                    <path
                      d="M1.614 12.444v-.94l1.786-1.9-.007-.008a4.93 4.93 0 01-.665-2.485c0-2.618 1.995-4.741 4.455-4.741s4.456 2.123 4.456 4.74c0 .913-.245 1.764-.665 2.486l-.008.008 1.787 1.9v.94H1.613zm5.57 2.37c-.616 0-1.115-.53-1.115-1.185h2.228c0 .655-.499 1.185-1.114 1.185zm6.52-3.975l-1.377-1.463a6.2 6.2 0 00.425-2.265c0-3.068-2.202-5.598-5.012-5.896V0H6.626v1.215c-2.81.298-5.012 2.828-5.012 5.896 0 .802.152 1.567.425 2.265L.663 10.839a.613.613 0 00-.163.42v2.37h4.455c0 1.308 1 2.37 2.228 2.37s2.228-1.062 2.228-2.37h4.455v-2.37a.613.613 0 00-.163-.42z"
                      fill="#22272D"
                    />
                  </svg>
                </span>
                <span
                  class="bp3-button-text"
                >
                  Notifications
                </span>
              </button>
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="rightBar"
    >
      <div />
      <button
        class="iconButton"
      >
        <span
          class="bp3-icon StyledProps---main--1Wws"
          title="Template Library"
        >
          <svg
            height="16"
            viewBox="0 0 12 13"
            width="16"
          >
            <defs>
              <path
                d="M1.8 13c.2 0 .4-.3.4-.6V.6C2.2.3 2 0 1.8 0H.4C.2 0 0 .3 0 .6v11.7c0 .4.2.7.4.7h1.4zm8.8 0l.9-.3c.3-.1.5-.4.4-.8L8.9.6C8.8.3 8.5.1 8.1.2l-.9.3c-.4 0-.5.4-.5.7l3.1 11.3c.1.4.5.6.8.5zm-5 0c.2 0 .4-.3.4-.7V.6c0-.3-.2-.6-.4-.6H4.2c-.2 0-.4.3-.4.6v11.7c0 .4.2.7.4.7h1.4z"
                id="template-library_svg__a"
              />
            </defs>
            <clippath
              id="template-library_svg__b"
            >
              <use
                overflow="visible"
                xlink:href="#template-library_svg__a"
              />
            </clippath>
            <path
              clip-path="url(#template-library_svg__b)"
              d="M-5-5h22v23H-5z"
              fill="#25a6f7"
            />
          </svg>
        </span>
      </button>
      <button
        class="iconButton"
      >
        <span
          class="bp3-icon StyledProps---main--1Wws"
          title="Input Variables"
        >
          <svg
            height="16"
            viewBox="0 0 15.4 12.2"
            width="16"
          >
            <defs>
              <path
                d="M12.5 6.1l-.2-.4c-.1-.3-.2-.4-.2-.5l-.2-.5c-.2-.4-.3-.6-.5-.6s-.4.2-.6.7c-.1 0-.2-.1-.2-.2 0-.2.1-.4.4-.7.2-.3.5-.4.6-.4.4 0 .8.5 1.2 1.6l.2.3.1-.2c.7-1.1 1.3-1.7 1.8-1.7.1 0 .3 0 .4.1l-.6.6h-.2c-.4 0-.8.4-1.3 1.3l-.1.2.1.3c.4 1.2.8 1.8 1.1 1.8.3 0 .5-.2.6-.6.1.1.1.1.1.2 0 .2-.1.4-.4.6-.3.2-.5.4-.7.4-.4 0-.8-.5-1.2-1.6l-.1-.4-.1.3c-.7 1.2-1.3 1.8-2 1.8-.2 0-.4-.1-.6-.2l.6-.6c.1.1.2.2.4.2.4 0 .8-.4 1.3-1.1l.3-.4v-.3zm-6.1-.5L2.6.9h3.8s1.3-.1 1.8.6.6 1.8.6 1.8h.5L9.1 0H0v.5l4.7 5.7L0 11.7v.5h9.3l.6-3.6-.5-.1s-.2.8-.8 1.5c-.6.7-3.1.6-3.1.6H2.1l4.3-5z"
                id="pipeline-variables_svg__a"
              />
            </defs>
            <clippath
              id="pipeline-variables_svg__b"
            >
              <use
                overflow="visible"
                xlink:href="#pipeline-variables_svg__a"
              />
            </clippath>
            <path
              clip-path="url(#pipeline-variables_svg__b)"
              d="M-5-5h25.4v22.2H-5z"
              fill="#9d7cff"
            />
          </svg>
        </span>
      </button>
      <button
        class="iconButton"
      >
        <span
          class="bp3-icon StyledProps---main--1Wws"
          title="Run Pipeline"
        >
          <svg
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <defs>
              <path
                d="M7.2 10.6V5.4L10.6 8l-3.4 2.6zm4.4-3.3L7.4 4.1c-.3-.2-.6-.2-.9-.1-.3.2-.5.5-.5.8v6.4c0 .3.2.6.5.8.3.1.6.1.9-.1l4.2-3.2c.2-.2.3-.4.3-.7s-.1-.5-.3-.7zm1.1 5.4c-2.2 2.2-5.7 2.6-8.4.8s-3.6-5.1-2.4-8c1.2-2.9 4.3-4.6 7.4-4 3.1.6 5.3 3.3 5.3 6.5.1 1.8-.6 3.4-1.9 4.7zm2.7-7.8C13.8 1.1 9.6-.9 5.7.4 1.7 1.6-.7 5.6.2 9.6s4.5 6.8 8.6 6.4c4.1-.4 7.2-3.8 7.2-8 0-1.1-.2-2.1-.6-3.1z"
                id="run-pipeline_svg__a"
              />
            </defs>
            <clippath
              id="run-pipeline_svg__b"
            >
              <use
                overflow="visible"
                xlink:href="#run-pipeline_svg__a"
              />
            </clippath>
            <path
              clip-path="url(#run-pipeline_svg__b)"
              d="M-5-5h26v26H-5z"
              fill="#54b610"
            />
          </svg>
        </span>
      </button>
      <div />
    </div>
  </div>
   
</div>
`;
